# Axel

./: .env  Cargo.toml  LICENSE.md  README.md  example.env
axel/: Cargo.toml
axel-cli/: Cargo.toml
axel-cli/src/: main.rs
axel-derive/: Cargo.toml
axel-derive/src/: lib.rs
axel-macros/: Cargo.toml
axel/src/: controller.rs  env.rs  lib.rs  macros.rs  prelude.rs
example/: Cargo.toml
example/src/: main.rs
example/src/routes/: mod.rs  test.rs
example/src/stores/: my_store.rs
src/: env.rs  lib.rs  macros.rs  startup.rs
src/services/: mod.rs
template/: Cargo.toml
template/src/: main.rs
template/src/controllers/: test.rs
template/src/routes/: hello.rs  mod.rs  scoped.rs  test.rs
template/src/stores/: mod.rs  my_store.rs
