[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axel = {path = "../axel"}
log = "0.4.17"
actix-web = "4"
actix-rt = "2.7.0"
serde = { version = "1.0", features = ["derive"] }
